GateIn-people:correct display and addition find users test